use older-style toList() call for JDK compat